--- a/neurodocker/templates/minc.yaml
+++ b/neurodocker/templates/minc.yaml
@@ -11,20 +11,23 @@
 generic:
   binaries:
     dependencies:
-      apt: libgl1-mesa-dev libice6 libsm6 libx11-6 libxext6 libxi6 libxmu6 libgomp1 libjpeg62
-      yum: libICE libSM libX11 libXext libXi libXmu libgomp libjpeg-turbo mesa-libGL-devel
-
+      apt: >
+        libgl1-mesa-dev libice6 libsm6 libx11-6 libxext6 libxi6 libxmu6
+        libgomp1 libjpeg62
+      yum: >
+        libICE libSM libX11 libXext libXi libXmu libgomp libjpeg-turbo
+        mesa-libGL-devel
     instructions: |
-      RUN {install_deps}
-          && echo "Downloading MINC, BEASTLIB, and MODELS..."
-          && mkdir -p {install_path}
-          && curl -sSL --retry 5 {binaries_url}
-          | tar -zx -C {install_path} --strip-components 1
-          && curl -sSL --retry 5 http://packages.bic.mni.mcgill.ca/tgz/beast-library-1.1.tar.gz \
-          | tar -zx -C {install_path}/share \
-          && curl -sSL --retry 5 -o /tmp/mni_90a.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09a_minc2.zip \
-          && unzip /tmp/mni_90a.zip -d {install_path}/share/icbm152_model_09a \
-          && curl -sSL --retry 5 -o /tmp/mni_90c.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09c_minc2.zip \
-          && unzip /tmp/mni_90c.zip -d {install_path}/share/icbm152_model_09c \
-          && rm -f /tmp/mni_90*.zip  \
-          && sed -i '$isource {install_path}/minc-toolkit-config.sh' $ND_ENTRYPOINT
+      {{ minc.install_dependencies() }}
+      echo "Downloading MINC, BEASTLIB, and MODELS..."
+      mkdir -p {{ minc.install_path }}
+      curl {{ minc.curl_opts }} {{ minc.binaries_url }} \
+      | tar -zx -C {{ minc.install_path }} --strip-components 1
+      curl {{ minc.curl_opts }} http://packages.bic.mni.mcgill.ca/tgz/beast-library-1.1.tar.gz \
+      | tar -zx -C {install_path}/share \
+      curl {{ minc.curl_opts }} -o /tmp/mni_90a.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09a_minc2.zip \
+      unzip /tmp/mni_90a.zip -d {{ minc.install_path }}/share/icbm152_model_09a \
+      curl {{ minc.curl_opts }} -o /tmp/mni_90c.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09c_minc2.zip \
+      unzip /tmp/mni_90c.zip -d {{ minc._install_path }}/share/icbm152_model_09c \
+      rm -f /tmp/mni_90*.zip  \
+      sed -i '$isource {{ minc.install_path }}/minc-toolkit-config.sh' $ND_ENTRYPOINT
