--- a/neurodocker/templates/miniconda.yaml
+++ b/neurodocker/templates/miniconda.yaml
@@ -4,15 +4,16 @@
 
 generic:
   binaries:
+    env:
+      CONDA_DIR: "{{ miniconda.install_path }}"
+      PATH: "{{ miniconda.install_path }}/bin:$PATH"
     instructions: |
-      ENV CONDA_DIR={install_path} \
-          PATH={install_path}/bin:$PATH
-      RUN echo "Downloading Miniconda installer ..."
-          && CONDA_INSTALLER="/tmp/miniconda.sh"
-          && curl -sSL --retry 5 -o "$CONDA_INSTALLER" {miniconda_url}
-          && bash "$CONDA_INSTALLER" -b -p "$CONDA_DIR"
-          && rm -f "$CONDA_INSTALLER"
-          && conda config --system --prepend channels conda-forge
-          && conda config --system --set auto_update_conda false
-          && conda config --system --set show_channel_urls true
-          && sync && conda clean -tipsy && sync
+      echo "Downloading Miniconda installer ..."
+      CONDA_INSTALLER="/tmp/miniconda.sh"
+      curl -sSL --retry 5 -o "$CONDA_INSTALLER" {{ miniconda.binaries_url }}
+      bash "$CONDA_INSTALLER" -b -p "$CONDA_DIR"
+      rm -f "$CONDA_INSTALLER"
+      conda config --system --prepend channels conda-forge
+      conda config --system --set auto_update_conda false
+      conda config --system --set show_channel_urls true
+      sync && conda clean -tipsy && sync
