--- a/neurodocker/templates/matlab-mcr.yaml
+++ b/neurodocker/templates/matlab-mcr.yaml
@@ -3,19 +3,39 @@
 # Website: https://www.mathworks.com/products/compiler/matlab-runtime.html
 #
 # TODO: add version 2010 from SPM.
+#
+# The `LD_LIBRARY_PATH` variable depends on the version.
+# See https://www.mathworks.com/help/compiler/mcr-path-settings-for-run-time-deployment.html#btnytqp-6
 
 generic:
   binaries:
+    urls:
+      2017b: http://ssd.mathworks.com/supportfiles/downloads/R2017b/deployment_files/R2017b/installers/glnxa64/MCR_R2017b_glnxa64_installer.zip
+      2017a: http://ssd.mathworks.com/supportfiles/downloads/R2017a/deployment_files/R2017a/installers/glnxa64/MCR_R2017a_glnxa64_installer.zip
+      2016b: http://ssd.mathworks.com/supportfiles/downloads/R2016b/deployment_files/R2016b/installers/glnxa64/MCR_R2016b_glnxa64_installer.zip
+      2016a: http://ssd.mathworks.com/supportfiles/downloads/R2016a/deployment_files/R2016a/installers/glnxa64/MCR_R2016a_glnxa64_installer.zip
+      2015b: http://ssd.mathworks.com/supportfiles/downloads/R2015b/deployment_files/R2015b/installers/glnxa64/MCR_R2015b_glnxa64_installer.zip
+      2015a: http://ssd.mathworks.com/supportfiles/downloads/R2015a/deployment_files/R2015a/installers/glnxa64/MCR_R2015a_glnxa64_installer.zip
+      2014b: http://ssd.mathworks.com/supportfiles/downloads/R2014b/deployment_files/R2014b/installers/glnxa64/MCR_R2014b_glnxa64_installer.zip
+      2014a: http://ssd.mathworks.com/supportfiles/downloads/R2014a/deployment_files/R2014a/installers/glnxa64/MCR_R2014a_glnxa64_installer.zip
+      2013b: http://ssd.mathworks.com/supportfiles/downloads/R2013b/deployment_files/R2013b/installers/glnxa64/MCR_R2013b_glnxa64_installer.zip
+      2013a: http://ssd.mathworks.com/supportfiles/MCR_Runtime/R2013a/MCR_R2013a_glnxa64_installer.zip
+      2012b: http://ssd.mathworks.com/supportfiles/MCR_Runtime/R2012b/MCR_R2012b_glnxa64_installer.zip
+      2012a: http://ssd.mathworks.com/supportfiles/MCR_Runtime/R2012a/MCR_R2012a_glnxa64_installer.zip
     dependencies:
       apt: libxext6 libxt6
       yum: libXext.x86_64 libXt.x86_64
     env:
-      MATLABCMD: {{ matlab.matlabcmd }}
-      LD_LIBRARY_PATH: {{ matlab.ld_library_path }}:$LD_LIBRARY_PATH
+      MATLABCMD: "{{ matlabmcr.matlabcmd }}"
+      LD_LIBRARY_PATH: "{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/runtime/glnxa64:\
+        {{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/bin/glnxa64:\
+        {{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/sys/os/glnxa64:\
+        {{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/sys/opengl/lib/glnxa64:\
+        $LD_LIBRARY_PATH"
     instructions: |
-      {{ matlab.install_dependencies() }}
+      {{ matlabmcr.install_dependencies() }}
       echo "Downloading MATLAB Compiler Runtime ..."
-      curl -sSL --retry 5 -o /tmp/mcr.zip {{ matlab.binaries_url }}
+      curl -sSL --retry 5 -o /tmp/mcr.zip {{ matlabmcr.binaries_url }}
       unzip -q /tmp/mcr.zip -d /tmp/mcrtmp
-      /tmp/mcrtmp/install -destinationFolder {{ matlab.install_path }} -mode silent -agreeToLicense yes
+      /tmp/mcrtmp/install -destinationFolder {{ matlabmcr.install_path }} -mode silent -agreeToLicense yes
       rm -rf /tmp/*
