--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -24,5 +24,5 @@ min-recon-all:
       echo "Downloading minimized FreeSurfer ..."
       mkdir -p {{ freesurfer.install_path }}
       curl {{ freesurfer.curl_opts }}  \
-      | tar xz -C {install_path} --strip-components 1
+      | tar -xz -C {install_path} --strip-components 1
       && sed -i '$isource $FREESURFER_HOME/SetUpFreeSurfer.sh' $ND_ENTRYPOINT
