add slash to pipe curl output to tar

--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -25,7 +25,7 @@ generic:
       {{ afni.install_debs() }}
       echo "Downloading AFNI ..."
       mkdir -p {{ afni.install_path }}
-      curl {{ afni.curl_opts }} {{ afni.binaries_url }}
+      curl {{ afni.curl_opts }} {{ afni.binaries_url }} \
       | tar -xz -C {{ self.install_path }} --strip-components 1
       {% if afni.install_r_pkgs %}
       {{ afni._install_r_pkgs() }}
