--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -10,6 +10,10 @@ generic:
   binaries:
     urls:
       latest: https://afni.nimh.nih.gov/pub/dist/tgz/linux_openmp_64.tgz
+    env:
+      PATH: "{{ afni.install_path }}:$PATH"
+      AFNI_CONFIG: "{{ afni.install_path }}:$PATH"
+      FOO: "BAR"
     dependencies:
       apt: >
         ed gsl-bin libglu1-mesa-dev libglib2.0-0 libglw1-mesa libgomp1
