--- a/neurodocker/templates/matlabmcr.yaml
+++ b/neurodocker/templates/matlabmcr.yaml
@@ -26,7 +26,7 @@ generic:
       apt: libxext6 libxt6
       yum: libXext.x86_64 libXt.x86_64
     env:
-      MATLABCMD: "{{ matlabmcr.matlabcmd }}"
+      MATLABCMD: "{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/toolbox/matlab"
       LD_LIBRARY_PATH: "{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/runtime/glnxa64:\
         {{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/bin/glnxa64:\
         {{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/sys/os/glnxa64:\
