--- a/neurodocker/templates/spm12.yaml
+++ b/neurodocker/templates/spm12.yaml
@@ -17,9 +17,9 @@ generic:
     instructions: |
       echo "Downloading standalone SPM ..."
       curl {{ spm12.curl_opts }} -o /tmp/spm12.zip {{ spm12.binaries_url }}
-      unzip -q spm12.zip -d /tmp
+      unzip -q /tmp/spm12.zip -d /tmp
       mkdir -p {{ spm12.install_path }}
-      mv /tmp/spm*/* {{ spm12.install_path }}/
+      mv /tmp/spm12/* {{ spm12.install_path }}/
       chmod -R 777 {{ spm12.install_path }}
       rm -rf /tmp/*
       {{ spm12.install_path }}/run_spm12.sh {{ spm12.mcr_path }} quit
