--- a/neurodocker/templates/_header.yaml
+++ b/neurodocker/templates/_header.yaml
@@ -25,6 +25,6 @@ generic:
       if [ ! -f "$ND_ENTRYPOINT" ]; then
         echo '#!/usr/bin/env bash' >> "$ND_ENTRYPOINT"
         echo 'set -ex' >> "$ND_ENTRYPOINT"
-        echo 'if [ -z "$*" ]; then /usr/bin/env bash; else $*; fi' >> "$ND_ENTRYPOINT";
+        echo 'if [ -n "$1" ]; then "$@"; else /usr/bin/env bash; fi' >> "$ND_ENTRYPOINT";
       fi
       chmod -R 777 /neurodocker && chmod a+s /neurodocker
