install pytest-cov, reperozip

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,11 @@ jobs:
     steps:
       - checkout
           path: /home/circleci/neurodocker
-      - pip3 install -e neurodocker
-      - setup_remote_docker
-      - pytest neurodocker
+      - run: |
+          pip3 install dropbox pytest-cov reprozip
+          pip3 install -e neurodocker
+     - setup_remote_docker
+     - run: pytest neurodocker
 
 # TODO: Fan out to parallelize docker builds in tests.
 
