--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,16 @@
 version: 2
 jobs:
   build:
-    working_directory: /home/circleci
     docker:
       - image: kaczmarj/neurodocker:circleci
+    working_directory: /home/circleci
     steps:
       - checkout
           path: /home/circleci/neurodocker
-      - run: |
-          pip3 install dropbox pytest-cov reprozip
-          pip3 install -e neurodocker
+      - run:
+          command: |
+            pip3 install dropbox pytest-cov reprozip
+            pip3 install -e neurodocker
      - setup_remote_docker
      - run: pytest neurodocker
 
