--- a/.circleci/Dockerfile.circleci
+++ b/.circleci/Dockerfile.circleci
@@ -5,7 +5,7 @@ LABEL maintainer="Jakub Kaczmarzyk <jakubk@mit.edu>"
 COPY requirements.txt requirements-dev.txt /opt/neurodocker/
 
 RUN tmp_pkgs="gcc musl-dev python3-dev sqlite-dev" \
-    && apk add --update --no-cache git python3 rsync $tmp_pkgs \
+    && apk add --update --no-cache git openssh python3 rsync $tmp_pkgs \
     && pip3 install --no-cache-dir -r /opt/neurodocker/requirements.txt \
     && pip3 install --no-cache-dir -r /opt/neurodocker/requirements-dev.txt \
     && pip3 install --no-cache-dir reprozip \
