change checkout path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     docker:
       - image: kaczmarj/neurodocker:circleci
-    working_directory: /home/circleci
+    working_directory: ~
     steps:
       - checkout:
           path: ~/neurodocker
