copy shell scripts into container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,14 @@ jobs:
           path: ~/neurodocker
       - run:
           command: |
-            ls ~
-            ls ~/neurodocker
             pip3 install dropbox pytest-cov reprozip
             pip3 install -e ~/neurodocker
       - setup_remote_docker
+          version: 17.11.0-ce
+      - run:
+          command: |
+            docker create -v /testscripts --name data-container alpine:3.7 /bin/true
+            docker cp ~/neurodocker/neurodocker/interfaces/tests/*.sh data-container:/testscripts
       - run: pytest ~/neurodocker/neurodocker
 
 # TODO: Fan out to parallelize docker builds in tests.
