--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -10,7 +10,7 @@ generic:
     urls:
       "6.0.0": foobar
       # See https://github.com/freesurfer/freesurfer/issues/70
-      "6.0.0-min": https://dl.dropbox.com/s/nnzcfttc41qvt31/recon-all-freesurfer6-3.min.tgz
+      "6.0.0-min": "https://dl.dropbox.com/s/nnzcfttc41qvt31/recon-all-freesurfer6-3.min.tgz"
     dependencies:
       apt: bc libgomp1 libxmu6 libxt6 tcsh perl
       yum: bc libgomp libXmu libXt tcsh perl
@@ -20,7 +20,7 @@ generic:
       {{ freesurfer.install_dependencies() }}
       echo "Downloading minimized FreeSurfer ..."
       mkdir -p {{ freesurfer.install_path }}
-      curl {{ freesurfer.curl_opts }}  \
+      curl {{ freesurfer.curl_opts }} {{ freesurfer.binaries_url }} \
       | tar -xz -C {{ freesurfer.install_path }} --strip-components 1 {% if freesurfer.exclude_paths -%}\
       {%- for exclude_path in freesurfer.exclude_paths %}
         --exclude='{{ exclude_path }}' \
