--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             pip install -U pip
             pip install dropbox pytest-cov reprozip
             pip install -e ~/neurodocker
-      - run: pytest ~/neurodocker/neurodocker
+      - run: pytest ~/neurodocker/neurodocker/interfaces/tests/test_dcm2niix.py
 
 # TODO: Fan out to parallelize docker builds in tests.
 
