--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             pip install -U pip
             pip install dropbox pytest-cov reprozip
             pip install -e ~/neurodocker
-      - run: pytest -s ~/neurodocker/neurodocker/interfaces/tests/test_convert3d.py ~/neurodocker/neurodocker/interfaces/tests/test_dcm2niix.py
+      - run: pytest ~/neurodocker/neurodocker
 
 # TODO: Fan out to parallelize docker builds in tests.
 
