--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -29,7 +29,7 @@ generic:
       {{ afni.install_debs() }}
       gsl2_path="$(find / -name 'libgsl.so.19')"
       if [ -n "$gsl2_path" ]; then
-        ln -sfv "$gsl2_path" "$(dirname $gsl2_path)/libgsl.so.0"
+        ln -sfv "$gsl2_path" "$(dirname $gsl2_path)/libgsl.so.0";
       fi
       ldconfig
       echo "Downloading AFNI ..."
