--- a/neurodocker/templates/mrtrix3.yaml
+++ b/neurodocker/templates/mrtrix3.yaml
@@ -14,4 +14,4 @@ generic:
       echo "Downloading MRtrix3 ..."
       mkdir -p {{ mrtrix3.install_path }}
       curl {{ mrtrix3.curl_opts }} {binaries_url} \
-      | tar zx -C {{ mrtrix3.install_path }} --strip-components 1
+      | tar -xz -C {{ mrtrix3.install_path }} --strip-components 1
