--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,13 @@ jobs:
       - run:
           command: |
             pyenv global 3.5.2
-            pip install -U pip
-            pip install dropbox pytest-cov reprozip
+            pip install -U --no-cache-dir pip
+            pip install --no-cache-dir dropbox pytest-cov reprozip
             pip install -e ~/neurodocker
-      - run: pytest ~/neurodocker/neurodocker
+      - run:
+          no_output_timeout: 60m
+          command: |
+            pytest -k 'test_docker' ~/neurodocker/neurodocker
 
 # TODO: Fan out to parallelize docker builds in tests.
 
