--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,41 @@
 ---
+_machine_kwds: &machine_kwds
+  image: circleci/classic:201711-01
+
+_checkout_kwds: &_checkout_kwds
+  path: ~/neurodocker
+
+_setup_env: &_setup_kwds
+  name: Setup environment
+  command: |
+    pyenv global 3.5.2
+    pip install -U --no-cache-dir pip
+    pip install --no-cache-dir dropbox pytest-cov reprozip
+    pip install -e ~/neurodocker
+
+_setup: &setup
+  - checkout:
+      *_checkout_kwds
+  - run:
+      *_setup_kwds
+
+
 version: 2
 jobs:
-  build:
+  test_docker:
     machine:
-      image: circleci/classic:201711-01
+      *machine_kwds
     steps:
-      - checkout:
-          path: ~/neurodocker
+      - *setup
       - run:
-          command: |
-            pyenv global 3.5.2
-            pip install -U --no-cache-dir pip
-            pip install --no-cache-dir dropbox pytest-cov reprozip
-            pip install -e ~/neurodocker
-      - run:
-          no_output_timeout: 60m
+          no_output_timeout: 360m
           command: |
             pytest -k 'test_docker' ~/neurodocker/neurodocker
 
-# TODO: Fan out to parallelize docker builds in tests.
+workflows:
+  version: 2
+  build_test_deploy:
+    jobs:
+      - test_docker
 
-# TODO: add deploy step
-#   - require the tests to pass before deploying.
-#   - include logic to update version based on git hash.
-#   - only deploy on pushes to master / releases.
-#   - deploy Docker image to DockerHub
-#   - upload wheels to PyPI.
+# TODO(kaczmarj): add test_singularity step
