--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,22 +2,16 @@
 _machine_kwds: &machine_kwds
   image: circleci/classic:201711-01
 
-_checkout_kwds: &_checkout_kwds
+_checkout_kwds: &checkout_kwds
   path: ~/neurodocker
 
-_setup_env: &_setup_kwds
+_setup_env: &setup_kwds
   name: Setup environment
   command: |
     pyenv global 3.5.2
     pip install -U --no-cache-dir pip
     pip install --no-cache-dir dropbox pytest-cov reprozip
     pip install -e ~/neurodocker
-
-_setup: &setup
-  - checkout:
-      *_checkout_kwds
-  - run:
-      *_setup_kwds
 
 
 version: 2
@@ -26,8 +20,12 @@ jobs:
     machine:
       *machine_kwds
     steps:
-      - *setup
+      - checkout:
+          *checkout_kwds
       - run:
+          *setup_kwds
+      - run:
+          name: Test docker image builds
           no_output_timeout: 360m
           command: |
             pytest -k 'test_docker' ~/neurodocker/neurodocker
